src/objects/Fulfillment_Response__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fulfillment Responses</relationshipLabel>
        <relationshipName>Fulfillment_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreateDateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>This is a lookup at the Partners Fulfillment Responses Event Type and is being added to the Account Related List for SS-5183</description>
        <formula>TEXT(Partner_Fulfillment_Response__r.Event_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Fulfillment Responses</relationshipLabel>
        <relationshipName>Fulfillment_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Response__c</fullName>
        <label>Location Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Fulfillment_Response__c</fullName>
        <label>Partner Fulfillment Response</label>
        <referenceTo>Partner_Fulfillment_Response__c</referenceTo>
        <relationshipLabel>Fulfillment Responses</relationshipLabel>
        <relationshipName>Fulfillment_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Fulfillment Response</label>
    <nameField>
        <displayFormat>FRN-{000000000}</displayFormat>
        <label>Fulfillment Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>